--- a/scripts/run/Makefile
+++ b/scripts/run/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.5 1999/01/09 17:39:40 mj Exp $
+#    $Id: Makefile,v 4.6 1999/02/07 11:05:22 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/run/
 #
@@ -16,7 +16,7 @@ include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
 
 
-PROGS		= runpoll runpoll-orodruin
+PROGS		= runpoll runpoll-orodruin runpoll-binkd
 
 
 all:		$(PROGS)
@@ -24,7 +24,11 @@ all:		$(PROGS)
 
 
 install:
-	$(INSTALL_PROG) runpoll $(PREFIX)$(BINDIR)
+	$(INSTALL_PROG) $(PROGS) $(PREFIX)$(BINDIR)
+
+install-orodruin:
+	$(INSTALL_PROG) runpoll-orodruin $(PREFIX)$(BINDIR)/runpoll
+	$(INSTALL_PROG) runpoll-binkd    $(PREFIX)$(BINDIR)/runpolli
 
 
 clean:
