--- a/test/tc.gate4/check.conf
+++ b/test/tc.gate4/check.conf
@@ -1,5 +1,5 @@
 #
-# $Id: check.conf,v 1.1 1998/04/03 20:15:40 mj Exp $
+# $Id: check.conf,v 1.2 1999/03/14 20:44:14 mj Exp $
 #
 # Test config.gate with RFCLevel 2, UseOrganizationForOrigin
 #
@@ -16,4 +16,4 @@ CheckAreasBBS
 RFCLevel 2
 UseOrganizationForOrigin
 
-include ../cf/gate.conf
+include ../cf/fidogate.conf
