--- a/test/tc.gate6/config
+++ b/test/tc.gate6/config
@@ -1,11 +1,9 @@
 #
-# Local test config
-#
-include ../cf/gate.conf
-
-
-#
 # Don't generate From: line at beginning of text body.
 #
 NoFromLine
 
+#
+# Local test config
+#
+include ../cf/fidogate.conf
