--- a/test/tc.bounce2/config
+++ b/test/tc.bounce2/config
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: config,v 1.2 1998/02/01 18:51:24 mj Exp $
+# $Id: config,v 1.3 1999/03/14 20:44:08 mj Exp $
 #
 
 #
@@ -12,4 +12,4 @@
 #
 XFlagsPolicy a
 
-include ../cf/gate.conf
+include ../cf/fidogate.conf
