--- a/test/tc.gate11/config
+++ b/test/tc.gate11/config
@@ -1,5 +1,5 @@
 #
-# $Id: config,v 1.2 1998/01/28 22:00:26 mj Exp $
+# $Id: config,v 1.3 1999/03/14 20:44:09 mj Exp $
 #
 # Test config with UseOrganizationForOrigin
 #
@@ -7,5 +7,4 @@
 # *first* match is used!
 UseFTNToAddress
 
-include ../cf/gate.conf
-
+include ../cf/fidogate.conf
