--- a/test/tc.gate7/config
+++ b/test/tc.gate7/config
@@ -1,7 +1,7 @@
-include		../cf/gate.conf
-
 #
 # FTN - Internet gateway. If set, Internet mail will be routed via FTN
 # and this gateway.
 #
 Gateway		242:4900/99
+
+include		../cf/fidogate.conf
