--- a/test/tc.point2/fidogate.conf
+++ b/test/tc.point2/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.2 1999/03/19 11:56:40 mj Exp $
+# $Id: fidogate.conf,v 1.1 1999/03/19 11:56:49 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -31,11 +31,11 @@ FTPINBOUND	./ftpin
 
 # files		
 ALIASES		%C/aliases
-AREAS		%C/areas
+AREAS		./areas
 HOSTS		%C/hosts
 PASSWD		%C/passwd
-PACKING		%C/packing
-ROUTING		%C/routing
+PACKING		./packing
+ROUTING		./routing
 HISTORY		%V/history
 LOGFILE		%G/log
 CHARSETMAP	%L/charset.bin
@@ -57,10 +57,10 @@ LogLevel	notice
 
 
 # AREAS.BBS EchoMail distribution list
-AreasBBS	../cf/areas.bbs
+AreasBBS	./areas.bbs
 
 # FAREAS.BBS file distribution list
-FAreasBBS	../cf/fareas.bbs
+FAreasBBS	./fareas.bbs
 
 
 
@@ -80,12 +80,12 @@ HostsDomain	.fido.de
 # F I D O N E T   A D D R E S S E S                                          #
 ##############################################################################
 
-Address		2:2452/110.2
-Address		242:1000/5
+Address		2:2449/417.2
+Address		2:2449/450.1
 
 # optional (different) gateway address, same as `ADDRESS' if missing
-GateAddress	2:2452/110.2
-GateAddress	242:1000/5
+#GateAddress	2:2452/110.2
+#GateAddress	242:1000/5
 
 
 # zones and domains, the outbound directory is relative to the one
@@ -190,7 +190,7 @@ DupeCheck
 MaxHistory 28
 
 # Kill old messages (date < now - MaxHistory) (= treat as dupe)
-#KillOld
+KillOld
 
 # Kill dupe messages
 #KillDupe
