--- a/examples/win32/fidogate.conf
+++ b/examples/win32/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.3 1999/05/15 20:54:34 mj Exp $
+# $Id: fidogate.conf,v 1.1 1999/05/15 20:54:35 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -15,19 +15,18 @@
 ##############################################################################
 
 # directories
-CONFIGDIR	/etc/fidogate
-LIBDIR		/usr/lib/fidogate
-BINDIR		/usr/lib/fidogate/bin
-LOGDIR		/var/log/fidogate
-VARDIR		/var/lib/fidogate
-LOCKDIR		/var/lock/fidogate
-SPOOLDIR	/var/spool/fidogate
-BTBASEDIR	/var/spool/bt
+CONFIGDIR	/fidogate/conf
+LIBDIR		/fidogate/lib
+BINDIR		/fidogate/bin
+LOGDIR		/fidogate/log
+VARDIR		/fidogate/var
+LOCKDIR		/fidogate/lock
+SPOOLDIR	/fidogate/spool
+BTBASEDIR	/fidogate/bt
 
 INBOUND		%B/in
 PINBOUND	%B/pin
 UUINBOUND	%B/uuin
-#FTPINBOUND	%B/ftpin
 
 # files		
 ALIASES		%C/aliases
@@ -42,8 +41,8 @@ CHARSETMAP	%L/charset.bin
 
 # facility, level when using syslog support (LOGFILE = "syslog")
 # NOT YET SUPPORTED by FIDOGATE C programs (used by Perl scripts)
-LogFacility	local0
-LogLevel	notice
+#LogFacility	local0
+#LogLevel	notice
 
 # OPTIONAL:
 #
@@ -69,10 +68,10 @@ FAreasBBS	%V/fareas.bbs
 ##############################################################################
 
 # hostname and domain
-Hostname	orodruin
-Domain		.fido.de
+Hostname	test
+Domain		.demo.org
 # optional domain name for entries in HOSTS file
-HostsDomain	.fido.de
+HostsDomain	.demo.org
 
 
 
@@ -80,12 +79,10 @@ HostsDomain	.fido.de
 # F I D O N E T   A D D R E S S E S                                          #
 ##############################################################################
 
-Address		2:2452/110.2
-Address		242:1000/5
+Address		2:2499/99
 
 # optional (different) gateway address, same as `ADDRESS' if missing
-GateAddress	2:2452/110.2
-GateAddress	242:1000/5
+#GateAddress	2:2499/99.99
 
 
 # zones and domains, the outbound directory is relative to the one
@@ -102,7 +99,7 @@ Zone	4	.fidonet.org		FidoNet		out.004
 Zone	5	.fidonet.org		FidoNet		out.005
 Zone	6	.fidonet.org		FidoNet		out.006
 
-Zone	21	.gernet.heise.de	GerNet		out.015
+Zone	21	.gernet.heise.de	GerNet		gernet.015
 
 Zone	242	.Fido.DE		FidoDE		out.0f2
 
@@ -113,10 +110,10 @@ Zone	242	.Fido.DE		FidoDE		out.0f2
 ##############################################################################
 
 # Mailer program (must behave like sendmail -t)
-AreaFixMailer	/usr/sbin/sendmail -t
+AreaFixMailer	-none-
 
 # CC of reply mails
-#AreaFixCc	postmaster@orodruin.fido.de
+#AreaFixCc	postmaster@test.demo.org
 
 # Location of help file
 AreaFixHelp	%L/areafix.help
@@ -145,13 +142,13 @@ DiskFreeMin	10240
 # Disk free method
 #
 # Run DiskFreeProg
-DiskFreeMethod	prog
+#DiskFreeMethod	prog
 # Always enough free disk space (use for WIN32)
-#DiskFreeMethod	none
+DiskFreeMethod	none
 
 # Disk free program, %p is replace with path name
 #
-DiskFreeProg	df -P %p
+#DiskFreeProg	df -P %p
 
 
 
@@ -255,10 +252,10 @@ UnknownTickArea UNKNOWN
 ##############################################################################
 
 # Default origin line for EchoMail messages
-Origin		"Martin Junius' orodruin.fido.de"
+Origin		"FIDOGATE Win32 Example"
 
 # Organization header for News
-Organization	"Martin Junius' orodruin.fido.de"
+Organization	"FIDOGATE Win32 Example"
 
 # Use text from * Origin line for Organization header
 #UseOriginForOrganization
@@ -323,8 +320,8 @@ KillUnknownMSGIDZone
 #     S    X-FTN-Seen-By
 #     P    X-FTN-Path
 #
-#X-FTN		ftTOVDSP
-X-FTN		ftTOVD
+X-FTN		ftTOVDSP
+#X-FTN		ftTOVD
 
 
 # Maximum size of FTN messages (default value) for splitting
@@ -336,13 +333,13 @@ MaxMsgSize		32000
 
 
 # Do not allow RFC addresses (chars !, %, @) in FTN to field
-#NoAddressInToField
+NoAddressInToField
 
 # CC of bounced messages
-BounceCCMail		postmaster@orodruin.fido.de
+BounceCCMail		postmaster@test.demo.org
 
 # Send mail from message trackers to
-TrackerMail		postmaster@orodruin.fido.de
+TrackerMail		postmaster@test.demo.org
 
 # Restrict gateway usage to FTN nodes registered in HOSTS
 HostsRestricted
@@ -351,7 +348,7 @@ HostsRestricted
 FTNJunkGroup		fido.junk
 
 # Errors-To header
-#Errors-To		postmaster@orodruin.fido.de
+#Errors-To		postmaster@test.demo.org
 
 
 # Translation of chars for automatic areas <-> newsgroup conversion
@@ -359,7 +356,7 @@ FTNJunkGroup		fido.junk
 #
 #                       area chars	newsgroup chars
 #			----------	---------------
-AreasXlate		_		-
+#AreasXlate		_		-
 
 # NOTE 1: real gateways should *not* disable FSC0035/47 kludges, the
 #         From: line is obsoleted by both ^ARFC-Xxxx kludges and
@@ -393,10 +390,10 @@ NoFromLine
 # sendmail program path and parameters
 #
 #    %s is replaced with the envelope sender
-FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:orodruin-ftn.fido.de -t
+FTNInSendmail	-none-
 
 # rnews program path
-FTNInRnews	/usr/bin/rnews
+FTNInRnews	-none-
 
 # run ftninrecomb
 #FTNInRecombine
@@ -431,9 +428,6 @@ RFCAddrMode <>
 
 # Check areas.bbs when gating newsgroups, messages for areas without
 # downlinks in areas.bbs will be skipped.
-#
-# WARNING: currently only works if gate AKA != main AKA, i.e. the gate
-# AKA is the first node in the areas.bbs entry!!!
 #CheckAreasBBS
 
 
@@ -457,38 +451,3 @@ NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
 # exported to the Usenet, setting it to "fidogate!not-for-mail" makes
 # the INN newsfeeds entry easier and less error-prone.
 NewsPathTail	"fidogate!not-for-mail"
-
-
-
-##############################################################################
-# F F X   C O N F I G U R A T I O N                                          #
-##############################################################################
-
-# If you don't know what the ffx programs are about, simply ignore or
-# comment this section!
-
-# Outbound flavor for FFX files
-FFXDataFlav	"Normal"
-
-# Compression programs for ffx
-#
-# Compressed data files
-FFXDataCompr	"/bin/gzip -c9"
-FFXDataExt	".gz"
-FFXDataDecompr	"gunzip"
-# Uncompressed data files
-FFXDataComprN	"/bin/cat"
-FFXDataExtN	""
-FFXDataDecomprN	""
-
-# FFX commands
-FFXCommand	rmail		%L/ffxrmail
-FFXCommand	rnews		/usr/bin/rnews
-FFXCommand	unbatchzip	/usr/bin/unzip -ojqq
-
-FFXUncompress	unzip		/usr/bin/unzip -pqq
-FFXUncompress	gunzip		/bin/gunzip -cq
-
-# Sendmail command for ffxrmail
-#
-FFXRmailSendmail  /usr/sbin/sendmail -oee -oi -pFFX:morannon.fido.de
