--- a/examples/win32/fidogate.conf
+++ b/examples/win32/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 1.1 1999/05/15 20:54:35 mj Exp $
+# $Id: fidogate.conf,v 1.2 1999/05/18 18:44:44 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -71,7 +71,7 @@ FAreasBBS	%V/fareas.bbs
 Hostname	test
 Domain		.demo.org
 # optional domain name for entries in HOSTS file
-HostsDomain	.demo.org
+HostsDomain	.fido.de
 
 
 
