--- a/examples/orodruin/fidogate.conf
+++ b/examples/orodruin/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.3 1999/05/15 20:54:34 mj Exp $
+# $Id: fidogate.conf,v 4.4 1999/05/18 19:49:03 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -431,9 +431,6 @@ RFCAddrMode <>
 
 # Check areas.bbs when gating newsgroups, messages for areas without
 # downlinks in areas.bbs will be skipped.
-#
-# WARNING: currently only works if gate AKA != main AKA, i.e. the gate
-# AKA is the first node in the areas.bbs entry!!!
 #CheckAreasBBS
 
 
@@ -441,15 +438,17 @@ RFCAddrMode <>
 #
 # Format	default:ftn:rfc
 #		            ^^^ charset in RFC message, when gating FTN->RFC
+#                               use RFC 2045 charset names!
 #		        ^^^---- charset in FTN message, when gating RFC->FTN
+#                               use FSC-0054 names!
 #		^^^^^^^-------- charset assumed for FTN message, if no
 #				^ACHRS kludge is present
 #
 # Default charset mapping, if NetMailCharset or -C is not set
-DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
+DefaultCharset	x-ibmpc:latin-1:iso-8859-1
 
 # Charset mapping for NetMail
-NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
+NetMailCharset	x-ibmpc:latin-1:iso-8859-1
 
 
 # The STRING which FIDOGATE's ftn2rfc adds to the Path header,
