--- a/test/cf/fidogate.conf
+++ b/test/cf/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.3 1999/03/19 17:05:27 mj Exp $
+# $Id: fidogate.conf,v 4.4 1999/05/18 19:49:07 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -438,15 +438,17 @@ ReplyAddrIfmailTX
 #
 # Format	default:ftn:rfc
 #		            ^^^ charset in RFC message, when gating FTN->RFC
+#                               use RFC 2045 charset names!
 #		        ^^^---- charset in FTN message, when gating RFC->FTN
+#                               use FSC-0054 names!
 #		^^^^^^^-------- charset assumed for FTN message, if no
 #				^ACHRS kludge is present
 #
 # Default charset mapping, if NetMailCharset or -C is not set
-DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
+DefaultCharset	x-ibmpc:latin-1:iso-8859-1
 
 # Charset mapping for NetMail
-NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
+NetMailCharset	x-ibmpc:latin-1:iso-8859-1
 
 
 # The STRING which FIDOGATE's ftn2rfc adds to the Path header,
