--- a/examples/point/fidogate.conf
+++ b/examples/point/fidogate.conf
@@ -1,13 +1,10 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.5 1999/05/22 12:04:58 mj Exp $
+# $Id: fidogate.conf,v 1.1 1999/05/22 12:04:58 mj Exp $
 #
-# NEW!!! (FIDOGATE 4.3.0+) single common config file
+# FIDOGATE 4.3.2+ example point configuration
 #
-# orodruin.fido.de
-#
-# Format:  keyword arg ...
-#          keyword and args may be put in double quotes "..."
+# point.demo.org
 #
 
 ##############################################################################
@@ -27,7 +24,7 @@ BTBASEDIR	/var/spool/bt
 INBOUND		%B/in
 PINBOUND	%B/pin
 UUINBOUND	%B/uuin
-#FTPINBOUND	%B/ftpin
+FTPINBOUND	%B/ftpin
 
 # files		
 ALIASES		%C/aliases
@@ -69,10 +66,10 @@ FAreasBBS	%V/fareas.bbs
 ##############################################################################
 
 # hostname and domain
-Hostname	orodruin
-Domain		.fido.de
+Hostname	point
+Domain		.demo.org
 # optional domain name for entries in HOSTS file
-HostsDomain	.fido.de
+HostsDomain	.demo.org
 
 
 
@@ -80,12 +77,10 @@ HostsDomain	.fido.de
 # F I D O N E T   A D D R E S S E S                                          #
 ##############################################################################
 
-Address		2:2452/110.2
-Address		242:1000/5
+Address		2:2499/999.9
 
 # optional (different) gateway address, same as `ADDRESS' if missing
-#GateAddress	2:2452/110.2
-#GateAddress	242:1000/5
+#GateAddress	2:2499/999.9
 
 
 # zones and domains, the outbound directory is relative to the one
@@ -93,7 +88,7 @@ Address		242:1000/5
 #
 #	zone	Internet domain		FTN domain	Outbound
 #	----	---------------		----------	--------
-Zone	default	.Fido.DE		FidoDE		-
+Zone	default	.fidonet.org		FidoNet		-
 
 Zone	1	.fidonet.org		FidoNet		out.001
 Zone	2	.fidonet.org		FidoNet		out
@@ -102,7 +97,7 @@ Zone	4	.fidonet.org		FidoNet		out.004
 Zone	5	.fidonet.org		FidoNet		out.005
 Zone	6	.fidonet.org		FidoNet		out.006
 
-Zone	21	.gernet.heise.de	GerNet		out.015
+Zone	21	.gernet.heise.de	GerNet		gernet.015
 
 Zone	242	.Fido.DE		FidoDE		out.0f2
 
@@ -116,7 +111,7 @@ Zone	242	.Fido.DE		FidoDE		out.0f2
 AreaFixMailer	/usr/sbin/sendmail -t
 
 # CC of reply mails
-#AreaFixCc	postmaster@orodruin.fido.de
+#AreaFixCc	postmaster@point.demo.org
 
 # Location of help file
 AreaFixHelp	%L/areafix.help
@@ -175,7 +170,7 @@ KillEmpty
 LogNetMail
 
 # Check ^APATH for our own address
-CheckPath
+#CheckPath
 
 # Kill EchoMail with circular ^APATH (looking for our own AKA),
 # if CheckPath is enabled
@@ -255,10 +250,10 @@ UnknownTickArea UNKNOWN
 ##############################################################################
 
 # Default origin line for EchoMail messages
-Origin		"Martin Junius' orodruin.fido.de"
+Origin		"FIDOGATE Example Point"
 
 # Organization header for News
-Organization	"Martin Junius' orodruin.fido.de"
+Organization	"FIDOGATE Example Point"
 
 # Use text from * Origin line for Organization header
 #UseOriginForOrganization
@@ -307,7 +302,7 @@ EchoMail4D
 
 # Don't gate messages with unknown zone in ^AMSGID (known zones are defined
 # in config.common).
-KillUnknownMSGIDZone
+#KillUnknownMSGIDZone
 
 # Don't gate messages without a valid ^AMSGID (or similar)
 #KillNoMSGID
@@ -343,13 +338,13 @@ MaxMsgSize		32000
 #NoAddressInToField
 
 # CC of bounced messages
-BounceCCMail		postmaster@orodruin.fido.de
+#BounceCCMail		postmaster@point.demo.org
 
 # Send mail from message trackers to
-TrackerMail		postmaster@orodruin.fido.de
+TrackerMail		user@point.demo.org
 
 # Restrict gateway usage to FTN nodes registered in HOSTS
-HostsRestricted
+#HostsRestricted
 
 # Newsgroup for unknown FTN areas
 FTNJunkGroup		fido.junk
@@ -363,7 +358,7 @@ FTNJunkGroup		fido.junk
 #
 #                       area chars	newsgroup chars
 #			----------	---------------
-AreasXlate		_		-
+#AreasXlate		_		-
 
 # NOTE 1: real gateways should *not* disable FSC0035/47 kludges, the
 #         From: line is obsoleted by both ^ARFC-Xxxx kludges and
@@ -380,13 +375,13 @@ AreasXlate		_		-
 #     0  -  no ^ARFC-Xxxx kludges
 #     1  -  ^ARFC-Xxxx kludges for some headers (config.h, RFC_LVL_1_HEADERS)
 #     2  -  ^ARFC-Xxxx kludges for all headers
-RFCLevel		1
+RFCLevel		0
 
 # Don't generate From: line at beginning of text body.
 NoFromLine
 
 # Don't generate FSC-0035 kludges (^AREPLYADDR, ^AREPLYTO)
-#NoFSC0035
+NoFSC0035
 
 # Don't generate FSC-0047 kludges (^ASPLIT)
 #NoFSC0047
@@ -397,7 +392,7 @@ NoFromLine
 # sendmail program path and parameters
 #
 #    %s is replaced with the envelope sender
-FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:orodruin-ftn.fido.de -t
+FTNInSendmail	/usr/sbin/sendmail -odb -oee -oi -f%s -pFIDOGATE:gateway -t
 
 # rnews program path
 FTNInRnews	/usr/bin/rnews
@@ -460,38 +455,3 @@ NetMailCharset	x-ibmpc:latin-1:iso-8859-1
 # exported to the Usenet, setting it to "fidogate!not-for-mail" makes
 # the INN newsfeeds entry easier and less error-prone.
 NewsPathTail	"fidogate!not-for-mail"
-
-
-
-##############################################################################
-# F F X   C O N F I G U R A T I O N                                          #
-##############################################################################
-
-# If you don't know what the ffx programs are about, simply ignore or
-# comment this section!
-
-# Outbound flavor for FFX files
-FFXDataFlav	"Normal"
-
-# Compression programs for ffx
-#
-# Compressed data files
-FFXDataCompr	"/bin/gzip -c9"
-FFXDataExt	".gz"
-FFXDataDecompr	"gunzip"
-# Uncompressed data files
-FFXDataComprN	"/bin/cat"
-FFXDataExtN	""
-FFXDataDecomprN	""
-
-# FFX commands
-FFXCommand	rmail		%L/ffxrmail
-FFXCommand	rnews		/usr/bin/rnews
-FFXCommand	unbatchzip	/usr/bin/unzip -ojqq
-
-FFXUncompress	unzip		/usr/bin/unzip -pqq
-FFXUncompress	gunzip		/bin/gunzip -cq
-
-# Sendmail command for ffxrmail
-#
-FFXRmailSendmail  /usr/sbin/sendmail -oee -oi -pFFX:morannon.fido.de
