--- a/examples/morannon/fidogate.conf
+++ b/examples/morannon/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.2 1999/03/20 14:30:54 mj Exp $
+# $Id: fidogate.conf,v 4.3 1999/06/17 21:42:46 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -463,6 +463,18 @@ NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
 # the INN newsfeeds entry easier and less error-prone.
 #NewsPathTail	"fidogate!not-for-mail"
 NewsPathTail	"not-for-mail"
+
+
+# Regular expression patterns for finding addresses in the first line
+# of the messages body. The first (...) sub-expression will be used for
+# the address (\1 in sed, $1 in perl). POSIX *Extended* regular expressions
+# are used.
+#
+# Compiled-in defaults:
+# Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]* \(.*\)) (writes|wrote):$
+# Regex1stLine  ^(.* <[a-z0-9_.\-]*@[a-z0-9_.\-]*>) (writes|wrote):$
+# Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote):$
+# Regex1stLine  ^In article <?[a-z0-9_.\-]*@[a-z0-9_.\-]*>?,? (.*) (writes|wrote):$
 
 
 
