--- a/test/cf/fidogate.conf
+++ b/test/cf/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.4 1999/05/18 19:49:07 mj Exp $
+# $Id: fidogate.conf,v 4.5 1999/06/17 21:42:51 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -456,6 +456,23 @@ NetMailCharset	x-ibmpc:latin-1:iso-8859-1
 # exported to the Usenet, setting it to "fidogate!not-for-mail" makes
 # the INN newsfeeds entry easier and less error-prone.
 NewsPathTail	"fidogate!not-for-mail"
+
+
+# Regular expression patterns for finding addresses in the first line
+# of the messages body. The first (...) sub-expression will be used for
+# the address (\1 in sed, $1 in perl). POSIX *Extended* regular expressions
+# are used.
+#
+# Compiled-in defaults:
+# Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]* \(.*\)) (writes|wrote):$
+# Regex1stLine  ^(.* <[a-z0-9_.\-]*@[a-z0-9_.\-]*>) (writes|wrote):$
+# Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote):$
+# Regex1stLine  ^In article <?[a-z0-9_.\-]*@[a-z0-9_.\-]*>?,? (.*) (writes|wrote):$
+Regex1stLine  ^I[nm] Artikel <?[a-z0-9_.\-]*@[a-z0-9_.\-]*>?,? (.*) (schreibt|schrieb)
+Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]* \(.*\)) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^(.* <[a-z0-9_.\-]*@[a-z0-9_.\-]*>) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^(.* \([a-z0-9_.\-]*@[a-z0-9_.\-]*\)) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote|schreibt|schrieb)
 
 
 
