--- a/examples/morannon/fidogate.conf
+++ b/examples/morannon/fidogate.conf
@@ -1,6 +1,6 @@
 # -*- sh -*-
 #
-# $Id: fidogate.conf,v 4.3 1999/06/17 21:42:46 mj Exp $
+# $Id: fidogate.conf,v 4.4 1999/06/20 13:49:47 mj Exp $
 #
 # NEW!!! (FIDOGATE 4.3.0+) single common config file
 #
@@ -467,14 +467,23 @@ NewsPathTail	"not-for-mail"
 
 # Regular expression patterns for finding addresses in the first line
 # of the messages body. The first (...) sub-expression will be used for
-# the address (\1 in sed, $1 in perl). POSIX *Extended* regular expressions
+# the address (\1 in sed, $1 in perl). POSIX *extended* regular expressions
 # are used.
-#
-# Compiled-in defaults:
-# Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]* \(.*\)) (writes|wrote):$
-# Regex1stLine  ^(.* <[a-z0-9_.\-]*@[a-z0-9_.\-]*>) (writes|wrote):$
-# Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote):$
-# Regex1stLine  ^In article <?[a-z0-9_.\-]*@[a-z0-9_.\-]*>?,? (.*) (writes|wrote):$
+# The OS *must* support HAS_POSIX_REGEX in config.h!!!
+Regex1stLine  ^In article <?[^ ]*@[^ ]*>? on ..:..:..,? (.*) (writes|wrote)
+Regex1stLine  ^In article <?[^ ]*@[^ ]*>? on ..\...\...,? (.*) (writes|wrote)
+Regex1stLine  ^In article <?[^ ]*@[^ ]*>?,? (.*) (writes|wrote):$
+Regex1stLine  ^In <[^ ]*@[^ ]*>,? (.*) (writes|wrote):$
+Regex1stLine  ^I[nm] Artikel <?[^ ]*@[^ ]*>?,? (.*) (schreibt|schrieb)
+Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]* \(.*\)) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^(.* <[a-z0-9_.\-]*@[a-z0-9_.\-]*>) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^(.* \([a-z0-9_.\-]*@[a-z0-9_.\-]*\)) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^([a-z0-9_.\-]*@[a-z0-9_.\-]*) (writes|wrote|schreibt|schrieb)
+Regex1stLine  ^On ..., .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
+Regex1stLine  ^On .. ... .... ..:..:.. [+\-]...., (.*) (writes|wrote|schreibt|schrieb):$
+# This is very generic, thus it must be the last entry.
+# If this regex yields too many errors, comment it.
+Regex1stLine  ^[ 	]*([^>|].*) (writes|wrote|schreibt|schrieb):$
 
 
 
